# debrix-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/debrix/: __init__.py  config.py  llm.py  mcp.py  mocks.py  payloads.py  ports.json  ports.py  semconv.py  span.py  tracing.py
tests/: conftest.py  test_config.py  test_llm.py  test_mcp_client.py  test_mocks.py  test_payloads.py  test_semconv.py  test_tracing.py  test_version.py
